force-app/main/default/objects/Jedi__c/Jedi__c.object-meta.xml
<CustomObject>
    <label>Jedi</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jedi</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>