force-app/main/default/objects/Jedi__c/fields/Lightsaber_Color__c.field-meta.xml
<CustomField>
    <fullName>Lightsaber_Color__c</fullName>
    <label>Lightsaber Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blue</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Purple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>