force-app/main/default/objects/Jedi__c/fields/Number_of_Hands__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Hands__c</fullName>
    <label>Number of Hands</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>