force-app/main/default/objects/Jedi__c/fields/Planet__c.field-meta.xml
<CustomField>
    <fullName>Planet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Planet</label>
    <referenceTo>Planet__c</referenceTo>
    <relationshipLabel>Jedi</relationshipLabel>
    <relationshipName>Jedi</relationshipName>
    <type>Lookup</type>
</CustomField>