force-app/main/default/objects/Jedi__c/fields/Race__c.field-meta.xml
<CustomField>
    <fullName>Race__c</fullName>
    <label>Race</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Human</fullName>
            </value>
            <value>
                <fullName>Twi&apos;lek</fullName>
            </value>
            <value>
                <fullName>Zabrak</fullName>
            </value>
            <value>
                <fullName>Togruta</fullName>
            </value>
            <value>
                <fullName>Cerean</fullName>
            </value>
            <value>
                <fullName>Nautolan</fullName>
            </value>
            <value>
                <fullName>Miralan</fullName>
            </value>
            <value>
                <fullName>Kel Dor</fullName>
            </value>
            <value>
                <fullName>Iktotchi</fullName>
            </value>
            <value>
                <fullName>Tholothian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>