force-app/main/default/objects/Jedi__c/fields/Rank__c.field-meta.xml
<CustomField>
    <fullName>Rank__c</fullName>
    <label>Rank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Padawan</fullName>
            </value>
            <value>
                <fullName>Jedi Knight</fullName>
            </value>
            <value>
                <fullName>Jedi Master</fullName>
            </value>
            <value>
                <fullName>Youngling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>