force-app/main/default/objects/Jedi__c/validationRules/Number_of_Hands.validationRule-meta.xml
<ValidationRule>
    <fullName>Number_of_Hands</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(Number_of_Hands__c)) &amp;&amp; (Number_of_Hands__c &lt; 0) || (Number_of_Hands__c &gt; 2)</errorConditionFormula>
    <errorDisplayField>Number_of_Hands__c</errorDisplayField>
    <errorMessage>A Jedi must have either 0, 1, or 2 hands.</errorMessage>
</ValidationRule>